--- a/zwpa_app/test/fixtures/customers.yml
+++ b/zwpa_app/test/fixtures/customers.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
-  password: MyString
+  user_id: 1
+  company_name: MyString
 
 two:
-  username: MyString
-  password: MyString
+  user_id: 1
+  company_name: MyString
