--- a/zwpa_app/Gemfile
+++ b/zwpa_app/Gemfile
@@ -29,6 +29,8 @@ gem 'jbuilder', '~> 1.2'
 
 gem 'foundation-rails', '5.4.5'
 
+gem 'will_paginate', '~> 3.0.6'
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
