--- a/zwpa_app/Gemfile
+++ b/zwpa_app/Gemfile
@@ -34,6 +34,9 @@ gem 'will_paginate'
 
 gem 'simple_form'
 
+#For image upload
+gem "paperclip", "~> 4.2"
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
