--- a/zwpa_app/Gemfile
+++ b/zwpa_app/Gemfile
@@ -37,6 +37,8 @@ gem 'simple_form'
 #For image upload
 gem "paperclip", "~> 4.2"
 
+gem "nested_form"
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
