--- a/zwpa_app/Gemfile
+++ b/zwpa_app/Gemfile
@@ -44,6 +44,8 @@ gem "paperclip", "~> 4.2"
 # Use postgresql as the database for Active Record
 gem 'pg'
 
+gem "nested_form"
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
